; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa-loop-niter.c_get_base_for.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa-loop-niter.c_get_base_for.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.loop = type { i32 }

@NULL_TREE = common dso_local global i64 0, align 8
@SSA_NAME = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.loop*, i64)* @get_base_for to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_base_for(%struct.loop* %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.loop*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.loop* %0, %struct.loop** %4, align 8
  store i64 %1, i64* %5, align 8
  %9 = load i64, i64* %5, align 8
  %10 = call i64 @is_gimple_min_invariant(i64 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i64, i64* %5, align 8
  store i64 %13, i64* %3, align 8
  br label %53

14:                                               ; preds = %2
  %15 = load %struct.loop*, %struct.loop** %4, align 8
  %16 = load i64, i64* %5, align 8
  %17 = call i64 @chain_of_csts_start(%struct.loop* %15, i64 %16)
  store i64 %17, i64* %6, align 8
  %18 = load i64, i64* %6, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %14
  %21 = load i64, i64* @NULL_TREE, align 8
  store i64 %21, i64* %3, align 8
  br label %53

22:                                               ; preds = %14
  %23 = load i64, i64* %6, align 8
  %24 = load %struct.loop*, %struct.loop** %4, align 8
  %25 = call i32 @loop_preheader_edge(%struct.loop* %24)
  %26 = call i64 @PHI_ARG_DEF_FROM_EDGE(i64 %23, i32 %25)
  store i64 %26, i64* %7, align 8
  %27 = load i64, i64* %6, align 8
  %28 = load %struct.loop*, %struct.loop** %4, align 8
  %29 = call i32 @loop_latch_edge(%struct.loop* %28)
  %30 = call i64 @PHI_ARG_DEF_FROM_EDGE(i64 %27, i32 %29)
  store i64 %30, i64* %8, align 8
  %31 = load i64, i64* %8, align 8
  %32 = call i64 @TREE_CODE(i64 %31)
  %33 = load i64, i64* @SSA_NAME, align 8
  %34 = icmp ne i64 %32, %33
  br i1 %34, label %35, label %37

35:                                               ; preds = %22
  %36 = load i64, i64* @NULL_TREE, align 8
  store i64 %36, i64* %3, align 8
  br label %53

37:                                               ; preds = %22
  %38 = load i64, i64* %7, align 8
  %39 = call i64 @is_gimple_min_invariant(i64 %38)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %43, label %41

41:                                               ; preds = %37
  %42 = load i64, i64* @NULL_TREE, align 8
  store i64 %42, i64* %3, align 8
  br label %53

43:                                               ; preds = %37
  %44 = load %struct.loop*, %struct.loop** %4, align 8
  %45 = load i64, i64* %8, align 8
  %46 = call i64 @chain_of_csts_start(%struct.loop* %44, i64 %45)
  %47 = load i64, i64* %6, align 8
  %48 = icmp ne i64 %46, %47
  br i1 %48, label %49, label %51

49:                                               ; preds = %43
  %50 = load i64, i64* @NULL_TREE, align 8
  store i64 %50, i64* %3, align 8
  br label %53

51:                                               ; preds = %43
  %52 = load i64, i64* %6, align 8
  store i64 %52, i64* %3, align 8
  br label %53

53:                                               ; preds = %51, %49, %41, %35, %20, %12
  %54 = load i64, i64* %3, align 8
  ret i64 %54
}

declare dso_local i64 @is_gimple_min_invariant(i64) #1

declare dso_local i64 @chain_of_csts_start(%struct.loop*, i64) #1

declare dso_local i64 @PHI_ARG_DEF_FROM_EDGE(i64, i32) #1

declare dso_local i32 @loop_preheader_edge(%struct.loop*) #1

declare dso_local i32 @loop_latch_edge(%struct.loop*) #1

declare dso_local i64 @TREE_CODE(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
